# youtube-timestamps

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  main.py  pyproject.toml
docs/brainstorms/: 2026-02-19-github-public-distribution-brainstorm.md
docs/plans/: 2026-02-19-feat-github-public-distribution-plan.md
src/: __init__.py  cache_manager.py  timestamp_formatter.py  topic_analyzer.py  transcriber.py  youtube_downloader.py
src/utils/: __init__.py  audio_processor.py  config_loader.py  logger.py
